--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-static": "^1.0.0-next.46",
 		"@sveltejs/kit": "next",
+		"@types/leaflet": "^1.9.0",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
 		"eslint": "^8.16.0",
@@ -27,7 +28,11 @@
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
-		"vite": "^3.1.0"
+		"vite": "^3.1.0",
+		"vite-plugin-iso-import": "^0.1.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"leaflet": "^1.9.2"
+	}
 }
