auto release to gh

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -18,6 +18,8 @@ dockers:
       - "ghcr.io/imnatgreen/busfares:latest"
     extra_files:
       - "create-tables.sql"
+release:
+  github:
 # archives:
 #   - replacements:
 #       darwin: Darwin
