--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-static": "^1.0.0-next.46",
 		"@sveltejs/kit": "next",
+		"@tailwindcss/forms": "^0.5.3",
 		"@types/leaflet": "^1.9.0",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
