--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
 		"postcss": "^8.4.19",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
+		"simple-svelte-autocomplete": "^2.5.1",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.7",
@@ -39,5 +40,7 @@
 	"dependencies": {
 		"@googlemaps/polyline-codec": "^1.0.28",
 		"currency.js": "^2.0.4",
+		"leaflet": "^1.9.2",
+		"leaflet.vectorgrid": "^1.3.0"
 	}
 }
