--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,8 @@
 		"@googlemaps/polyline-codec": "^1.0.28",
 		"currency.js": "^2.0.4",
 		"leaflet": "^1.9.2",
-		"leaflet.vectorgrid": "^1.3.0"
+		"leaflet.vectorgrid": "^1.3.0",
+		"ol": "^7.2.2",
+		"ol-mapbox-style": "^9.2.4"
 	}
 }
